--- a/main.css
+++ b/main.css
@@ -21,12 +21,12 @@ body {
   list-style: none;
   color: black;
   font-family: Ubuntu;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 800;
   border-radius: 10px;
 }
 #navbar a:hover {
-  font-size: 22px;
+  font-size: 18px;
   color: hsl(190, 51%, 71%);
 }
 #main {
@@ -118,5 +118,22 @@ header {
   iframe {
     width: 300px;
     height: 300px;
+  }
+}
+@media screen and (max-width: 500px){
+  #navbar a {
+    font-size: 15px;
+  }
+  #navbar a:hover {
+    font-size: 16px;
+  }
+  .contact-links {
+    display: flex;
+    padding: 10px;
+  }
+  #contact-info{
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
   }
 }
