--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ body {
   font-size: 16px;
   font-weight: 800;
   border-radius: 10px;
+  padding-right: 25px;
 }
 #navbar a:hover {
   font-size: 18px;
